k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiz-app
  template:
    metadata:
      labels:
        app: wiz-app
    spec:
      serviceAccountName: wiz-app
      containers:
      - name: wiz-app
        image: wiz-panel-images:latest
        ports:
        - containerPort: 8080
