k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiz-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: wiz-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
